# prediction-service

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflow/: deploy.yaml
.github/workflows/: deploy.yaml
main/: app.py
src/: api.py  model.py
